2004-03-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmessagedialog.xml (MessageDialog) Remove
	gtk.DIALOG_NO_SEPARATOR from the list of valid flags. Fixes #136984.
	(thanks to j.jordens and Eric Grinaker).

2004-04-13  Erik Grinaker  <erikg@wired-networks.net>

	* pygtk-gdkwindow.xml (raise): Changed name of raise() to
	raise_(), and added a note to explain this is because
	raise is a reserved Python keyword.

2004-01-28  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktogglebutton.xml (get_mode)
	(set_mode) Clarify the use of these methods as applied to checkbuttons
	and radiobuttons and the results. (thanks to Antonio A. A.)

	* pygtk2-ref.xml Change date. Version number to 1.9

2003-11-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreemodel.xml (foreach) Add description of function
	signature.
	

2003-10-07  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Change date. Version number to 1.8

	* pygtk-gtkcellrenderertext.xml Fix signature an ddescription of the
	"edited" signal	to add path and new_text arguments. (thanks to Steve
	Chaplin)

	* pygtk-gtkcellrenderertoggle.xml Fix signature and description of
	"toggled" signal to add path argument. (thanks to Steve Chaplin)

2003-08-25  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkadjustment.xml (set_all) Remove deprecation note and add
	keyword	designations.

	* pygtk-gdkpixbufloader.xml (write) Set initializer on parameter count
	and change description to indicate how count is used.

	* pygtk-gtktextbuffer.xml (create_tag) tag_name defaults to None.

2003-08-23  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkpixbuf.xml Note that pixel_array attribute array contents
	can be changed.

	* pygtk-gdk-functions.xml (threads_init) Remove comments about broken
	threads imiplementation which is now fixed in 1.99.17+.

	* pygtk-gtktreemodel.xml (rows_reordered) Add description of this
	method.

	* pygtk-gtktreeview.xml (enable_model_drag_source)
	(emable_model_drag_dest)
	(get_drag_dest_row)