@@ -1,3 +1,10 @@
+2004-03-25  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gdkwindow.xml Remove description of atom_intern function.
+
+	* pygtk-gdk-function.xml Add description of atom_intern function. Fixes
+	#137935 (thanks to Erik Grinaker).
+
 2004-03-22  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtkmessagedialog.xml (MessageDialog) Remove
